--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.22.3",
+    "@vercel/postgres": "^0.8.0",
     "axios": "^1.6.8",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
